# forgetops

./: .env.example  .gitattributes  .gitignore  AGENTS.md  JUDGING.md  LICENSE  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
demo-video/: AGENTS.md  DESIGN.md  SCRIPT.md  STORYBOARD.md  index.html  meta.json  narration.txt  package-lock.json  package.json  transcript.json
demo-video/capture/: meta.json
demo-video/capture/extracted/: animations.json  asset-descriptions.md  design-styles.json  fonts-manifest.json  page.html  tokens.json  visible-text.txt
docs/: ARCHITECTURE.md  MIGRATION_VERIFICATION.md  PROJECT_BRIEF.md  ROADMAP.md  RULES_CHECKLIST.md
examples/input/: ecommerce-privacy-graph.json  ecommerce-sandbox.json
examples/output/: datahub-live-smoke.json  datahub-writeback-summary.json  erasure-plan.json  erasure-plan.md  sandbox-execution-summary.json
infra/datahub/: quickstart-v1.6.0.yml  quickstart-version-mapping.yml
scripts/: datahub.ps1  seed_datahub.py  setup-runtime.ps1  smoke_datahub_graph.py  smoke_datahub_mcp.py  smoke_datahub_writeback.py  verify_judging_evidence.py
src/forgetops/: __init__.py  cli.py  datahub_mcp.py  datahub_normalizer.py  datahub_seed.py  models.py  planner.py  reporting.py  sandbox.py
submission/: COMMUNITY_OUTREACH.md  DATAHUB_FEEDBACK.md  DEVPOST.md  GALLERY.md  HACKATHON_RELEASE.md  RELEASE_CHECKLIST.md  VIDEO_UPLOAD.md
tests/: test_cli.py  test_datahub_mcp.py  test_datahub_normalizer.py  test_datahub_seed.py  test_datahub_writeback_script.py  test_judging_evidence.py  test_models.py  test_planner.py  test_sandbox.py
web/: .prettierignore  AGENTS.md  DESIGN.md  IMPLEMENTATION_INVENTORY.md  design-qa.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs  vitest.config.mjs
web/scripts/: demo-smoke.mjs
web/src/: App.jsx  global.d.ts  main.jsx  styles.css
web/src/components/: AppHeader.jsx  ApprovalConsole.jsx  EvidenceFooter.jsx  EvidenceTimeline.jsx  ImpactMap.jsx  StageRail.jsx
web/tests/: accessibility.test.jsx  workflow.integration.test.jsx
(+4 files in other folders)
