[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "forgetops"
version = "0.1.0"
description = "A lineage-aware right-to-erasure agent powered by DataHub"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "ForgetOps contributors" }]
dependencies = [
  "pydantic>=2.10,<3",
  "rich>=13,<15",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[project.scripts]
forgetops = "forgetops.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/forgetops"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["forgetops"]
